--- a/index.html
+++ b/index.html
@@ -9,18 +9,18 @@
 </head>
 <body>
     <header>
-        <nav>
+        <nav class="nav">
             <a href="./index.html">WebStudio</a>
-            <ul>
-                <li><a href="">Studio</a></li>
-                <li><a href="">Portfolio</a></li>
-                <li><a href="">Contacts</a></li>
+            <ul class="nav-list">
+                <li class="nav-item current"><a class="nav-link" href="">Studio</a></li>
+                <li class="nav-item"><a class="nav-link" href="">Portfolio</a></li>
+                <li class="nav-item"><a class="nav-link" href="">Contacts</a></li>
             </ul>
         </nav>
-        <address>
-            <ul>
-                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+        <address class="Contacts-adress">
+            <ul class="contact-list">
+                <li class="email"><a class="email-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li class="phone"><a class="phone" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
             </ul>
         </address>
        
