--- a/index.html
+++ b/index.html
@@ -8,114 +8,114 @@
 
 </head>
 <body>
-    <header>
-        <nav class="nav">
-            <a href="./index.html">WebStudio</a>
-            <ul class="nav-list">
-                <li class="nav-item current"><a class="nav-link" href="">Studio</a></li>
-                <li class="nav-item"><a class="nav-link" href="">Portfolio</a></li>
-                <li class="nav-item"><a class="nav-link" href="">Contacts</a></li>
+    <header class="header">
+        <nav class="header-nav">
+            <a href="./index.html" class="header-nav-link">WebStudio</a>
+            <ul class="header-nav-list">
+                <li class="header-nav-item current"><a class="nav-link" href="">Studio</a></li>
+                <li class="header-nav-item"><a class="header-nav-link" href="">Portfolio</a></li>
+                <li class="header-nav-item"><a class="header-nav-link" href="">Contacts</a></li>
             </ul>
         </nav>
-        <address class="Contacts-adress">
-            <ul class="contact-list">
-                <li class="email"><a class="email-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li class="phone"><a class="phone" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+        <address class="header-contacts-adress">
+            <ul class="header-contact-list">
+                <li class="header-contact-email"><a class="header-email-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li class="header-contact-phone"><a class="header-phone-link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
             </ul>
         </address>
        
     </header>      
     
-    <main>
-        <section>
-            <h1 hidden>Effective Solutions for Your Business</h1>
-            <button type="button">Order Service</button>
+    <main class="main">
+        <section class="main-hero">
+            <h1 class="main-hero-title" hidden >Effective Solutions for Your Business</h1>
+            <button class="main-hero-btn" type="button" >Order Service</button>
         </section>
-            <section>
+            <section class="main-feature">
                 <h2 class="sr-only" hidden>Advantages</h2>
-                <ul>
-                    <li>
-                        <h3>Strategy</h3>
-                        <p>Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
+                <ul class="main-feature-list">
+                    <li class="main-feature-item">
+                        <h3 class="main-feature-title">Strategy</h3>
+                        <p class="main-feature-text">Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
                     </li>
                     <li>
-                        <h3>Punctuality</h3>
-                        <p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
+                        <h3 class="main-feature-title">Punctuality</h3>
+                        <p class="main-feature-text">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
                     </li>
                     <li>
-                        <h3>Diligence</h3>
-                        <p>Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
+                        <h3 class="main-feature-title">Diligence</h3>
+                        <p class="main-feature-text">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
                     </li>
                     <li>
-                        <h3>Technologies</h3>
-                        <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
+                        <h3 class="main-feature-title">Technologies</h3>
+                        <p class="main-feature-text">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
                     </li>
                 </ul>
             </section>
-            <section>
-                <h2>Our Team</h2>
-                <ul>
-                    <li> <img src="./images/mark.jpg" alt="Mark" width="264">
-                        <h3>Mark Guerrero</h3>
-                        <p>Product Designer</p>
+            <section class="main-team">
+                <h2 class="main-team-title">Our Team</h2>
+                <ul class="main-team-list">
+                    <li class="main-team-item"> <img src="./images/mark.jpg" alt="Mark" width="264" class="main-team-img">
+                        <h3 class="main-team-subtitle">Mark Guerrero</h3>
+                        <p class="main-team-text">Product Designer</p>
 
                     </li>
-                    <li>
-                        <img src="./images/tom.jpg" alt="Tom" width="264">
-                        <h3>Tom Ford</h3>
-                        <p>Frontend Developer</p>
+                    <li class="main-team-item">
+                        <img src="./images/tom.jpg" alt="Tom" width="264" class="main-team-img">
+                        <h3 class="main-team-subtitle">Tom Ford</h3>
+                        <p class="main-team-text">Frontend Developer</p>
                     </li>
-                        <li>
-                            <img src="./images/camila.jpg" alt="Camila" width="264">
-                            <h3>Camila Garcia</h3>
-                            <p>Marketing</p>
+                        <li class="main-team-item">
+                            <img src="./images/camila.jpg" alt="Camila" width="264" class="main-team-img">
+                            <h3 class="main-team-subtitle">Camila Garcia</h3>
+                            <p class="main-team-text">Marketing</p>
                         </li>
                         <li>
                             <img src="./images/daniel.jpg" alt="Daniel" width="264">
-                            <h3>Daniel Wilson</h3>
-                            <p>UI Designer</p>
+                            <h3 class="main-team-subtitle">Daniel Wilson</h3>
+                            <p class="main-team-text"> UI Designer</p>
                         </li>
                     </ul>
             </section>
-            <section>
-                <h2>Our Portfolio</h2>
-                <ul>
-                    <li> <img src="./images/portfolio1.jpg" alt="Banking App" width="360">
-                        <h3>Banking App</h3>
-                        <p>App</p>
+            <section class="main-portfolio">
+                <h2 class="main-portfolio-title">Our Portfolio</h2>
+                <ul class="main-portfolio-list">
+                    <li class="main-portfolio-item"> <img src="./images/portfolio1.jpg" alt="Banking App" width="360" class="main-portfolio-img">
+                        <h3 class="main-portfolio-subtitle">Banking App</h3>
+                        <p class="main-portfolio-text">App</p>
 
                     </li>
-                    <li>
-                        <img src="./images/portfolio2.jpg" alt="Cashless Payment" width="360">
-                        <h3>Cashless Payment</h3>
-                        <p>Marketing</p>
+                    <li class="main-portfolio-item">
+                        <img src="./images/portfolio2.jpg" alt="Cashless Payment" width="360" class="main-portfolio-img">
+                        <h3 class="main-portfolio-subtitle">Cashless Payment</h3>
+                        <p class="main-portfolio-text">Marketing</p>
                     </li>
-                        <li>
-                            <img src="./images/portfolio3.jpg" alt="Meditation App" width="360">
-                            <h3>Meditation App</h3>
-                            <p>App</p>
+                        <li class="main-portfolio-item">
+                            <img src="./images/portfolio3.jpg" alt="Meditation App" width="360" class="main-portfolio-img">
+                            <h3 class="main-portfolio-subtitle">Meditation App</h3>
+                            <p class="main-portfolio-text">App</p>
                         </li>
-                        <li>
-                            <img src="./images/portfolio4.jpg" alt="Taxi Service" width="360">
-                            <h3>Taxi Service</h3>
-                            <p>Marketing</p>
+                        <li class="main-portfolio-item">
+                            <img src="./images/portfolio4.jpg" alt="Taxi Service" width="360" class="main-portfolio-img">
+                            <h3 class="main-portfolio-subtitle">Taxi Service</h3>
+                            <p class="main-portfolio-text">Marketing</p>
                         </li>
-                        <li>
-                            <img src="./images/portfolio5.jpg" alt="Screen Illustrations" width="360">
-                            <h3>Screen Illustrations</h3>
-                            <p>Design</p>
+                        <li class="main-portfolio-item">
+                            <img src="./images/portfolio5.jpg" alt="Screen Illustrations" width="360" class="main-portfolio-img">
+                            <h3 class="main-portfolio-subtitle">Screen Illustrations</h3>
+                            <p class="main-portfolio-text">Design</p>
                         </li>
                     </ul>
                     <li>
-                        <img src="./images/portfolio6.jpg" alt="Online Courses" width="360">
-                        <h3>Online Courses</h3>
-                        <p>Marketing</p>
+                        <img src="./images/portfolio6.jpg" alt="Online Courses" width="360" class="main-portfolio-img">
+                        <h3 class="main-portfolio-subtitle">Online Courses</h3>
+                        <p class="main-portfolio-text">Marketing</p>
                     </li>
             </section>
     </main>         
-    <footer>
-        <a href="./index.html">WebStudio</a>
-        <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+    <footer class="footer">
+        <a class="footer-link" href="./index.html">WebStudio</a>
+        <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
 
     </footer>
 </body>
