--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <nav class="header-nav">
             <a href="./index.html" class="header-nav-link">WebStudio</a>
             <ul class="header-nav-list">
-                <li class="header-nav-item current"><a class="nav-link" href="">Studio</a></li>
+                <li class="header-nav-item"><a class="header-nav-link" href="">Studio</a></li>
                 <li class="header-nav-item"><a class="header-nav-link" href="">Portfolio</a></li>
                 <li class="header-nav-item"><a class="header-nav-link" href="">Contacts</a></li>
             </ul>
