--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <header class="header">
         <nav class="header-nav">
-            <a href="./index.html" class="header-nav-link">WebStudio</a>
+            <a href="./index.html" class="header-nav-link"><span class="header-nav-color">Web</span> Studio</a>
             <ul class="header-nav-list">
                 <li class="header-nav-item"><a class="header-nav-link" href="">Studio</a></li>
                 <li class="header-nav-item"><a class="header-nav-link" href="">Portfolio</a></li>
