--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WebStudio</title>
-    <link rel="stylesheet" href="./css/styles.css"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
-
+<link rel="stylesheet" href="https://cdnjs.com/libraries/modern-normalize">
+<link rel="stylesheet" href="./css/styles.css"/>
 
 </head>
 <body>
@@ -118,7 +118,7 @@
             </section>
     </main>         
     <footer class="footer">
-        <a class="footer-link" href="./index.html">WebStudio</a>
+        <a class="footer-link" href="./index.html"><span class="footer-link-color">Web</span> Studio</a>
         <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
 
     </footer>
