--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="https://cdnjs.com/libraries/modern-normalize">
 <link rel="stylesheet" href="./css/styles.css"/>
-
 </head>
 <body>
     <header class="header">
@@ -74,8 +73,8 @@
                             <h3 class="main-team-subtitle">Camila Garcia</h3>
                             <p class="main-team-text">Marketing</p>
                         </li>
-                        <li>
-                            <img src="./images/daniel.jpg" alt="Daniel" width="264">
+                        <li class="main-team-item" >
+                            <img src="./images/daniel.jpg" alt="Daniel" width="264" class="main-team-img">
                             <h3 class="main-team-subtitle">Daniel Wilson</h3>
                             <p class="main-team-text"> UI Designer</p>
                         </li>
