--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 <body>
     <header class="header">
         <nav class="header-nav">
-            <a href="./index.html" class="header-nav-link"><span class="header-nav-color">Web</span> Studio</a>
+            <a href="./index.html" class="header-nav-link">Web <span class="header-nav-color">Studio</span></a>
             <ul class="header-nav-list">
-                <li class="header-nav-item"><a class="header-nav-link" href="">Studio</a></li>
-                <li class="header-nav-item"><a class="header-nav-link" href="">Portfolio</a></li>
-                <li class="header-nav-item"><a class="header-nav-link" href="">Contacts</a></li>
+                <li class="header-nav-item"><a class="header-nav-link" href="./index.html">Studio</a></li>
+                <li class="header-nav-item"><a class="header-nav-link" href="./portfolio.html">Portfolio</a></li>
+                <li class="header-nav-item"><a class="header-nav-link" href="./contacts.html">Contacts</a></li>
             </ul>
         </nav>
         <address class="header-contacts-adress">
