--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
             </section>
     </main>         
     <footer class="footer">
-        <a class="footer-link" href="./index.html"><span class="footer-link-color">Web</span> Studio</a>
+        <a class="footer-link" href="./index.html">Web<span class="footer-link-color"></span>Studio</span></a>
         <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
 
     </footer>
