--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
             <a href="./index.html" class="header-nav-link">Web <span class="header-nav-color">Studio</span></a>
             <ul class="header-nav-list">
                 <li class="header-nav-item"><a class="header-nav-link" href="./index.html">Studio</a></li>
-                <li class="header-nav-item"><a class="header-nav-link" href="./portfolio.html">Portfolio</a></li>
-                <li class="header-nav-item"><a class="header-nav-link" href="./contacts.html">Contacts</a></li>
+                <li class="header-nav-item"><a class="header-nav-link" href="">Portfolio</a></li>
+                <li class="header-nav-item"><a class="header-nav-link" href="">Contacts</a></li>
             </ul>
         </nav>
         <address class="header-contacts-adress">
