--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
         </nav>
         <address class="header-contacts-adress">
             <ul class="header-contact-list">
-                <li class="header-contact-email"><a class="header-email-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li class="header-contact-phone"><a class="header-phone-link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+                <li class="header-contact-email"><a class="header-nav-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li class="header-contact-phone"><a class="header-nav-link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
             </ul>
         </address>
        
